# RFTR

./: CMakeLists.txt  README.md
demos/: receiverawdata.cpp  sendandreceive.cpp  sendpulse.cpp
src/: RFTR.hpp  receiver.cpp  receiver.hpp  transmitter.cpp  transmitter.hpp
